<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coodernadas_gps_java"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="16dp"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/imgPinGPS"
                app:layout_constraintEnd_toStartOf="@+id/imgPinGPS"
                app:layout_constraintHorizontal_bias="0.612"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imgPinGPS">

                <TextView
                    android:id="@+id/txtLatitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:text="@string/latitude"
                    android:textColor="@color/verde_limao"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtLongitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:text="@string/longitude"
                    android:textColor="@color/verde_limao"
                    android:textSize="20sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imgPinGPS"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/txt_pin_gps_no_mapa"
                android:src="@drawable/icon_mapa"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.028" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/imgPinGPS"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgPinGPS"
                app:layout_constraintTop_toTopOf="@+id/imgPinGPS">

                <TextView
                    android:id="@+id/txtValorLatitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:hint="@string/txt_valor_zero"
                    android:textColor="@color/verde_limao"
                    android:textColorHint="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtValorLongitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:hint="@string/txt_valor_zero"
                    android:textColorHint="@color/white"
                    android:textColor="@color/verde_limao"
                    android:textSize="20sp" />


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>






</androidx.appcompat.widget.LinearLayoutCompat>